# DiscordBot

./: .gitmodules  CMakeLists.txt
Source/: Main.cpp
